--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,7 +75,7 @@ otel:
 # Logging configuration
 logging:
   level:
-    com.poc.bigtable: DEBUG
+    amat.arrowstore.bigtable: DEBUG
     org.springframework.web: INFO
     org.hibernate.SQL: WARN
     org.hibernate.type.descriptor.sql.BasicBinder: WARN
